tools/hermes/tests/fixtures/env_interleaved_stdout/expected_stderr.txt
  × interleaved error
   ╭─[[PROJECT_ROOT]/src/lib.rs:1:1]
 1 │ pub fn foo() {}
   · ─────┬────
   ·      ╰── label
 2 │ 
   ╰────

Error: Diagnostic error in charon
